-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.1.0-beta
-
None
-
Windows 7, MinGW
-
f5566aef24a0fad28b8084df176548ca64c1accb
The timeline layout is quite off. The "Painting" row is huge and the grid is not properly drawn.
For Gerrit Dashboard: QTCREATORBUG-11565 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
79211,1 | QmlProfiler: Properly initialize private members of timeline models | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |