QmlProfiler: Properly initialize private members of timeline models

Task-number: QTCREATORBUG-11565
Change-Id: I227fba871beeed79923e794c03a08ff154c9e4f8
Reviewed-by: Kai Koehne <kai.koehne@digia.com>